# Asterisk

./: CMakeLists.txt  Darkpool_CDA.sh  Darkpool_VM.sh  Dockerfile  README.md  assistedmpc_offline.sh  asterisk_mpc.sh  asterisk_offline.sh  asterisk_online.sh  net_config.json  network.sh
benchmark/: CMakeLists.txt  Darkpool_CDA.cpp  Darkpool_VM.cpp  assistedmpc_offline.cpp  asterisk_mpc.cpp  asterisk_offline.cpp  asterisk_online.cpp  utils.cpp  utils.h
cmake/: FindGMP.cmake  FindNTL.cmake
src/: CMakeLists.txt
src/assistedMPC/: offline_evaluator.cpp  offline_evaluator.h  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/asterisk/: offline_evaluator.cpp  offline_evaluator.h  online_evaluator.h  online_evaluator_load_balanced.cpp  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h
src/io/: netmp.h
src/utils/: circuit.cpp  circuit.h  darkpool.h  helpers.cpp  helpers.h  liquidity_matching.h  neural_network.h  types.cpp  types.h
test/: CMakeLists.txt  assistedMPC_offline.cpp  io.cpp  offline.cpp  online.cpp  rand.cpp  sharing.cpp  utils.cpp
